fix routing to account and index

--- a/week3/www/index.html
+++ b/week3/www/index.html
@@ -12,6 +12,6 @@
             <input type="text" name="password"><br><br>
             <input type="submit" value="Upload">
         </form>
-        <button>Account</button>
+        <button type="button">Account</button>
     </body>
 </html>
