--- a/week3/www/index.html
+++ b/week3/www/index.html
@@ -16,5 +16,6 @@
             <input type="submit" value="Login">
         </form>
         <div id='errormsg' class='hidemessage'>User credentials do not match</div>
+        <div id='loginsuccess' class='hidesuccessmessage'></div>
     </body>
 </html>
